trunk/test/T2/Fail/T2_classNoBraces.ic
class Test{
	void foo(){}
	void foo2(){}
	
